Upgrade to 100dvh for mobile layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,7 @@ body::-webkit-scrollbar {
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   z-index: 1;
 }
 
@@ -59,7 +59,7 @@ body::-webkit-scrollbar {
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   background-image:
     linear-gradient(to right, var(--bg-grid) 1px, transparent 1px),
     linear-gradient(to bottom, var(--bg-grid) 1px, transparent 1px);
@@ -94,7 +94,7 @@ body::-webkit-scrollbar {
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   z-index: 10;
   pointer-events: none;
   display: flex;
